[gd_scene load_steps=10 format=3 uid="uid://c11qqxbj740as"]

[ext_resource type="Script" path="res://nextlevel/next_level.gd" id="1_huoms"]
[ext_resource type="Texture2D" uid="uid://dxurfc1dvo8cv" path="res://nextlevel/portal_disabled.png" id="2_73280"]
[ext_resource type="PackedScene" uid="uid://b4qsplrduk1l8" path="res://safezone/safe_zone.tscn" id="3_o1nro"]
[ext_resource type="AudioStream" uid="uid://byfjvq388gr5f" path="res://nextlevel/open.wav" id="4_fj1yi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_golky"]
size = Vector2(12, 12)

[sub_resource type="Gradient" id="Gradient_bqu5e"]
offsets = PackedFloat32Array(0, 0.207921, 0.742574, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2hrin"]
gradient = SubResource("Gradient_bqu5e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cuyey"]
emission_shape = 3
emission_box_extents = Vector3(4, 4, 1)
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 40.0
orbit_velocity_min = 0.0
orbit_velocity_max = 1.0
color = Color(0.556863, 1, 0.996078, 1)
color_ramp = SubResource("GradientTexture1D_2hrin")

[sub_resource type="CircleShape2D" id="CircleShape2D_0iunv"]
radius = 16.0

[node name="NextLevel" type="Area2D"]
z_index = 1
script = ExtResource("1_huoms")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_73280")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_golky")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = -1
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_cuyey")
lifetime = 1.5
fixed_fps = 60
trail_enabled = true

[node name="SafeZone" parent="." instance=ExtResource("3_o1nro")]
shape = SubResource("CircleShape2D_0iunv")

[node name="AudioOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fj1yi")
